<resources>
    <string name="app_name">Giragrana</string>
    <string name="action_client">Cliente</string>
    <string name="action_resale">Revenda</string>
    <string name="action_venha_ca">Venha cá</string>
    <string name="action_want_pdf">Imprimir</string>
    <string name="action_info">Info</string>
    <string name="action_delete_account">Deletar conta</string>
    <string name="action_new_product">Novo Produto</string>
    <string name="action_new_client">Novo Cliente</string>
    <string name="action_new_resale">Nova Revenda</string>

    <string name="about_title">Dominando o Android</string>
    <string name="about_message">Desenvolvido por Rian Noronha</string>
    <string name="about_button_site">Veja mais</string>

    <string name="form_label_name_product">Nome</string>
    <string name="form_label_name_client">Nome</string>
    <string name="form_label_contact_client">Contato</string>
    <string name="form_label_image">Imagem</string>
    <string name="form_label_price">Preço</string>
    <string name="form_label_description">Descrição</string>
    <string name="form_label_sold">Tá vendido?</string>
    <string name="fab_description">Este é o botão flutuante para adicionar um produto</string>

    <string name="error_invalid_product">Preencha direitinho o produto</string>
    <string name="error_invalid_client">Preencha direitnho o cliente</string>
    <string name="error_invalid_resale">Preencha direitnho a revenda</string>
    <string name="error_product_not_found">Produto não encontrado</string>
    <string name="error_client_not_found">Cliente não encontrado</string>
    <string name="error_resale_not_found">Revenda não encontrada</string>
    <string name="error_resales">Se ligue se tem produto ou cliente</string>
    <string name="action_delete">Excluir</string>
    <plurals name="list_product_selected">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>

    <plurals name="list_client_selected">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>

    <plurals name="list_resale_selected">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>

    <string name="message_products_deleted">%d itens excluídos</string>
    <string name="message_clients_deleted">%d itens excluídos</string>
    <string name="message_resales_deleted">%d itens excluídos</string>
    <string name="undo">Desfazer</string>

    <string name="action_share">Compartilhar</string>
    <string name="share_text"> -> %1$s: %2$s</string>
    <string name="action_edit">Editar</string>
    <string name="scroll_description">Scroll na tela de formulário</string>

    <!-- Formulário de Revenda -->
    <string name="form_label_date">Data que revendi:</string>
    <string name="form_label_receiving_date">Data de Recebimento:</string>
    <string name="form_label_payment_method">Pagou como:</string>
    <string name="save_button">Salvar</string>
    <string name="form_label_resale_price">Por quanto revendo:</string>
    <string name="form_label_profit_percentage">Quanto quero ganhar em cima: %1$d%%</string>
    <string name="form_label_product_price">Por quanto tá:</string>
    <string name="txt_choice_client">Meu cliente é:</string>
    <string name="txt_choice_product">Vou vender:</string>

    <string name="tab_description">Tab Layout</string>
    <string name="img_login">Imagem da tela de login</string>
    <string name="view_pager_description">View Pager Layout</string>
    <string name="error_spinner_products">Veja se tem produto para revenda</string>
    <string name="btn_sign">Bora</string>
    <string name="auth_error_message">Erro de autenticação. Já, já é resolvido!</string>
    <string name="login_cancelled">Login cancelado</string>
    <string name="login_fail">Falha no Login</string>
    <string name="unknown_error">Ocorreu um problema durante o processo de autenticação. Por favor, tente novamente.</string>
    <string name="network_error">Ocorreu um erro de rede durante o processo de login.</string>
    <string name="default_web_client_id">682553714532-20kllgbek6keb75k8kh6ovmfdl50p6vt.apps.googleusercontent.com</string>
    <string name="privacy_policy">Política de privacidade</string>
    <string name="error_privacy_policy">Pequeno problema para mostrar a Política do app, aguarde um pouco:)</string>
    <string name="delete_account_title">Exclusão da conta</string>
    <string name="delete_account_warning">Todos os seus dados serão excluídos do Giragrana</string>
    <string name="delete_account_button">DELETAR</string>
    <string name="stay_here">É isso aí:) Fique por aqui mesmo!</string>
    <string name="error_delete_account">Pequeno problema ao deletar, já será corrigido!</string>
    <string name="interrogation_delete_account">Quer mesmo ir embora?</string>
    <string name="interrogation_delete_account_positive">Quero</string>
    <string name="interrogation_delete_account_negative">Quero não</string>


</resources>