<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_client"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_client"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resale"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_resale"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_venha_ca"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_venha_ca"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>